tests/any2mochi/rust/trait_def.rs.error
error: unsupported TRAIT item
--> line 1, column 1
  1 | trait Foo {
    | ^
  2 |     fn bar(&self);

